# roleta-russa

./: Makefile
src/: CMakeLists.txt  criptografia_arquivo.cpp  directory_scanner.cpp  functions.h  main.cpp
